logs/dag_id=website_crawler/run_id=manual__2023-09-10T15:56:01.422226+00:00/task_id=create_data_table/attempt=1.log
[2023-09-10T15:56:34.062+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: website_crawler.create_data_table manual__2023-09-10T15:56:01.422226+00:00 [queued]>
[2023-09-10T15:56:34.101+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: website_crawler.create_data_table manual__2023-09-10T15:56:01.422226+00:00 [queued]>
[2023-09-10T15:56:34.106+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 4
[2023-09-10T15:56:34.185+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_data_table> on 2023-09-10 15:56:01.422226+00:00
[2023-09-10T15:56:34.224+0000] {standard_task_runner.py:57} INFO - Started process 67 to run task
[2023-09-10T15:56:34.370+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'website_crawler', 'create_data_table', 'manual__2023-09-10T15:56:01.422226+00:00', '--job-id', '477', '--raw', '--subdir', 'DAGS_FOLDER/crawl_data_log_into_postgres.py', '--cfg-path', '/tmp/tmpxyf65nui']
[2023-09-10T15:56:34.409+0000] {standard_task_runner.py:85} INFO - Job 477: Subtask create_data_table
[2023-09-10T15:56:34.832+0000] {task_command.py:415} INFO - Running <TaskInstance: website_crawler.create_data_table manual__2023-09-10T15:56:01.422226+00:00 [running]> on host 30cb2bd58730
[2023-09-10T15:56:35.271+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='website_crawler' AIRFLOW_CTX_TASK_ID='create_data_table' AIRFLOW_CTX_EXECUTION_DATE='2023-09-10T15:56:01.422226+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-09-10T15:56:01.422226+00:00'
[2023-09-10T15:56:35.289+0000] {sql.py:274} INFO - Executing: -- create data table
create_data_table = """
            CREATE TABLE IF NOT EXISTS test2(
            title CHAR(5000) NOT NULL,
            author CHAR(5000) NOT NULL,
            date CHAR(5000) NOT NULL,
            time CHAR(5000) NOT NULL,
            summary CHAR(5000) NOT NULL);
          """
[2023-09-10T15:56:35.327+0000] {base.py:73} INFO - Using connection ID 'postgres_local' for task execution.
[2023-09-10T15:56:35.369+0000] {base.py:73} INFO - Using connection ID 'postgres_local' for task execution.
[2023-09-10T15:56:35.388+0000] {sql.py:418} INFO - Running statement: -- create data table
create_data_table = """
            CREATE TABLE IF NOT EXISTS test2(
            title CHAR(5000) NOT NULL,
            author CHAR(5000) NOT NULL,
            date CHAR(5000) NOT NULL,
            time CHAR(5000) NOT NULL,
            summary CHAR(5000) NOT NULL);
          """, parameters: None
[2023-09-10T15:56:35.396+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "create_data_table"
LINE 2: create_data_table = """
        ^

[2023-09-10T15:56:35.453+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=website_crawler, task_id=create_data_table, execution_date=20230910T155601, start_date=20230910T155634, end_date=20230910T155635
[2023-09-10T15:56:35.480+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 477 for task create_data_table (syntax error at or near "create_data_table"
LINE 2: create_data_table = """
        ^
; 67)
[2023-09-10T15:56:35.531+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-09-10T15:56:35.613+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
